Projet3 - Fixing horizontal scrolling pb

--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ input
 }
 #fonctionnement > h3
 {
-    width: 90%;
+    width: 96%;
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 0;
@@ -271,7 +271,7 @@ input
 
 #restaurants h3
 {
-    width: 90%;
+    width: 96%;
     margin-left: 10px;
     margin-top: 20px;
     margin-bottom: 20px;
